# OPENLUX

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/openlux/: common.c  common.h  motors.c  motors.h  sensors.c  sensors.h  web.c  web.h
web/: app.js  index.html  theme.css
